tests/snapshots/codegen_snapshot_tests__assert_surface.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

#![allow(unused_imports, dead_code, unused_variables)]

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("0.2.0-dev.2");
use incan_stdlib::prelude::*;
use incan_derive::{FieldInfo, IncanClass};
pub use crate::__incan_std::testing::assert_eq;
fn check_basics() {
    crate::__incan_std::testing::assert_eq(1 + 1, 2);
    crate::__incan_std::testing::assert_ne(3, 4);
    crate::__incan_std::testing::assert_false(false);
    crate::__incan_std::testing::assert(true);
    crate::__incan_std::testing::assert(
        10 > 5,
        "ten should be greater than five".to_string(),
    );
}
